hphp/hack/test/typecheck/strict_switch/num_int.php.new_exhaustivity.exp
ERROR: File "num_int.php", line 18, characters 3-48:
This `switch` case cannot be checked for exhaustivity. Please provide a default. Without a default, when none of the cases match, a runtime exception will be thrown. (Typing[4489])
  File "num_int.php", line 18, characters 11-12:
  The scrutinee has type `num` which is not an enum, enum class, enum class label, null, or nullable or tuples of those types.
